--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="img1.jpg" alt="Dotun ageloye profile picture " width="150px"></td>
+            <td> <img src="img1.jpg" alt="Dotun ageloye profile picture " width="150%"></td>
             <td> <h1>Dotun Ageloye</h1>
                 <p><em>Trained Political Scientist,<br> Human Resource Manager,<br> Computer Programmer,<br> Writer & Agriculturist.
                   <br>  Bsc Political Science, Department Of politiccal Science, University Of Jos. 
