--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@ Duties:</b></p>
 <div>
     <p>Other Information</p>
     <ul>
-        <li> <a href="hobbies.html">Hobbies</a> </li>
-        <li> <a href="work.html">Other skills </a> </li>
+        <li> <a href="hobbies">Hobbies</a> </li>
+        <li> <a href="work">Other skills </a> </li>
     </ul>
 </div>
 
