--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     I have received certification on Computer and Mobile Devices, Management & Repairs issued By Sam Smart Phone endorsed by <a href="">Brekete Family</a>, and additional certification from the Brekete Family Code Camp in Partnership With <a href=""> Techpatriate Services</a>, for Participation in the January 2024 <a href="">Code Camp</a>. And have also completed HTML & CSS projects on <a href="">freecodecamp.org</a>. Have received additional training on Digital Skills from <a href="">The SMEDAN</a> EDT/DIGITAL SKILLS FOR MSME's BENEFICIARIES in FCT. In collaboration with <a href="">DAHO GLOBAL RESOURCES Ltd</a>. 
     I am a member of the certified Associate of the <a href=""> Chattered Institute Of Human Resource Management</a>, and the National Association Of Political Science Students. Academically I have earned A Bachelor Of Science [B.Sc. (HONS)] in Political Science from the <a href="">University oF Jos</a> for achieving a Second Class Honours, Upper Division, upon completion of a 4year program and submisson of a Research Project on the topic; Ebola, Good Governance And Development In Nigeria (2010-2020). <br> <br>
 
-    Link to: <a href="contact info"> Contact Information</a> <hr>
+    Link to: <a href="./contact info"> Contact Information</a> <hr>
     
    </P>
 
@@ -170,8 +170,8 @@ Duties:</b></p>
 <div>
     <p>Other Information</p>
     <ul>
-        <li> <a href="hobbies">Hobbies</a> </li>
-        <li> <a href="work">Other skills </a> </li>
+        <li> <a href="./hobbies">Hobbies</a> </li>
+        <li> <a href="./work">Other skills </a> </li>
     </ul>
 </div>
 
