--- a/hobbies.html
+++ b/hobbies.html
@@ -24,6 +24,6 @@
         <li>Visiting new places</li>
     </ul>
     
-    <a href="index.html">Go back</a>
+    <a href="./">Go back</a>
 </body>
 </html>
