--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Duties:</b></p>
     <p>Other Information</p>
     <ul>
         <li> <a href="./hobbies">Hobbies</a> </li>
-        <li> <a href="./work">Other skills </a> </li>
+        <li> <a href="work">Other skills </a> </li>
     </ul>
 </div>
 
