--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
     <title>Dotun's Personal Site</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" sizes="180x180" href="img1.jpg"> 
@@ -171,7 +174,7 @@ Duties:</b></p>
     <p>Other Information</p>
     <ul>
         <li> <a href="./hobbies">Hobbies</a> </li>
-        <li> <a href="work">Other skills </a> </li>
+        <li> <a href="./work">Other skills </a> </li>
     </ul>
 </div>
 
